--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,8 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+**/node_modules/
+**/build/
 jspm_packages/
 
 # TypeScript v1 declaration files
