--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,12 @@ services:
       target: dev
     volumes:
       - ./backend/:/usr/src/app/backend
+      - /usr/src/app/backend/node_modules
     expose:
       - 5000
     ports:
       - 5000:5000
-    command: npm run dev
+    # command: npm run dev
 
   frontend:
     container_name: frontend
@@ -25,8 +26,9 @@ services:
       CHOKIDAR_USEPOLLING: 'true'
     volumes:
       - ./frontend/:/usr/src/app/frontend
+      - /usr/src/app/frontend/node_modules
     expose:
       - 3000
     ports:
       - 3000:3000
-    command: npm run start
+    # command: npm run start
