--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.8'
 services:
   backend:
     container_name: backend
+    extra_hosts:
+      - 'host.docker.internal:host-gateway'
     build:
       context: ./backend
       dockerfile: dockerfile
@@ -17,6 +19,8 @@ services:
 
   frontend:
     container_name: frontend
+    extra_hosts:
+      - 'host.docker.internal:host-gateway'
     build:
       context: ./frontend
       dockerfile: dockerfile
@@ -24,6 +28,7 @@ services:
     environment:
       # This env var is need for hot reload https://github.com/facebook/create-react-app/issues/1049
       CHOKIDAR_USEPOLLING: 'true'
+      NODE_ENV: 'development'
     volumes:
       - ./frontend/:/usr/src/app/frontend
       - /usr/src/app/frontend/node_modules
